# MAI-DB

./: .env.sample  Makefile  README.md  pyproject.toml
app/: __main__.py
app/backend/database/: __init__.py
app/backend/handlers/: __init__.py
app/frontend/: main_window.py
app/frontend/widgets/: __init__.py  entries_table.py  entry_manager.py  tables_list.py
